# P7Tiago-PersonFollowing

./: .gitignore  ContinousTree_draft.xml  Depth reading.py  MaskRCNN.py  Readme.md  TestTree.xml  UpdatedBehaviourTree (copy).xml  UpdatedBehaviourTree.xml  UpdatedBehaviourTreePalette.xml  UpdatedBehaviourTree_Dynamic_working.xml  UpdatedBehaviourTree_SubtreeVersion.xml  UpdatedBehaviourTree_bak.xml  UpdatedBehaviourTree_combineFindHuman.xml  UpdatedBehaviourTree_dynamic_target.xml  UpdatedBehaviourTree_working01-12.xml  UpdatedBehaviourTree_working2711.xml  depth_reading.cpp  image_saver.py  initial_behaviour_tree.xml  map.pgm  map.yaml  map_old.pgm  map_useless.pgm  nav2_conf.yaml  nav2_conf_teb.yaml  ownKalman.py  test.csv  test2.csv  transformTo3D.py  v1.pgm  v1.yaml
custom_bridges/: CMakeLists.txt  CMakeLists_copy.txt  compressed_depth_image_1_to_2.cpp  compressed_image_1_to_2.cpp  copy_this_CMakeLists.txt  depth_1_to_2.cpp  head_action_2_1.cpp  head_mover_v2.cpp  instructions.txt
getIntrinsics/: main.py
launch/: tiago_p7.launch.py  tiago_p7.launch.py.bak
ros1_src/nav_node/: CMakeLists.txt  package.xml
ros1_src/nav_node/src/: nav.py
ros1_src/target_track/: CMakeLists.txt  package.xml
ros1_src/target_track/src/: KCF_tracker.py  RQ_tracker.py  image_saver.py  temp2.py
speech_recog/: speech_recog.py
speechrecog/: CMakeLists.txt  package.xml
src/behavior_tree_plugins/: CMakeLists.txt  UpdatedBehaviourTreePalette.xml  package.xml
src/behavior_tree_plugins/include/behavior_tree_plugins/: findHuman_action.hpp  findSameHuman.hpp  find_human_action.h  find_same_human.h  has_moved_condition.h  isFIrstRun_condition.hpp  isHumanFound_condition.hpp  is_first_run_condition.h  is_human_found.hpp  is_human_found_condition.h  logger_action.h  look_for_human_action.hpp  reset_kalman_action.h
src/behavior_tree_plugins/src/: build_nodes.cpp  compute_goal_from_position.hpp  findHuman_action.cpp  findSameHuman.cpp  find_human_action.cpp  find_human_action_old.cpp  find_same_human_action.cpp  hasMoved_condition.hpp  has_moved_condition.cpp  isFirstRun_condition.cpp  isHumanFound_condition.cpp  is_first_run_condition.cpp  is_human_found_condition.cpp  logger_action.cpp  look_for_human_action.cpp  reset_kalman_action.cpp
src/feature_extractor/: datasets.py  feature_extractor.py  feature_extractor_test.py  main.py  model.py  train_softmax.py  train_triplet.py
src/feature_extractor/dataset_cropper/: dataset_cropper.py  yolo_model.py
src/feature_extractor/yolo/: dataset_cropper.py
src/initial_interface/: CMakeLists.txt  package.xml
src/initial_interface/src/: interface_node.py
src/kalman_action_server/: package.xml  setup.cfg  setup.py
src/kalman_action_server/kalman_action_server/: main.py  ownKalman.py  test.py
src/person_detector/: package.xml  setup.cfg  setup.py
src/person_detector/person_detector/: image_subscriber_test.py  person_detector_node.py  person_detector_test2_node.py  person_detector_test_node.py  person_finder.py
src/person_detector/person_detector/feature_extractor/: datasets.py  feature_extractor.py  feature_extractor_test.py  image_series_benchmark.py  model.py  plot_training.py  train_model.py  train_softmax.py  train_triplet.py  utils.py
src/person_detector/person_detector/feature_extractor/runs/triplet_run1/: events.out.tfevents.1605195574.emil-Lenovo-ideapad-720S-14IKB.17302.0
src/person_detector/person_detector/feature_extractor_module/: feature_extractor.py  feature_extractor_test.py  main.py  model.py  train_softmax.py  train_triplet.py
src/person_detector/person_detector/person_finder/: dataset_cropper.py  person_finder.py  yolo_model.py
src/person_detector/person_detector/yolo/: dataset_cropper.py  yolo_model.py  yolo_utils.py
src/person_follower_interfaces/: CMakeLists.txt  package.xml
src/person_follower_interfaces/action/: Kalman.action
src/person_follower_interfaces/msg/: BridgeAction.msg  PersonInfo.msg  PersonInfoList.msg
src/vision/: package.xml  setup.py
src/vision/vision/: cv_bridge_custom.py  kcf.py
target_track/: CMakeLists.txt
target_track/src/: KCF_tracker.py  RQ_tracker.py  temp.py
